# CineReserve-API

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: serializers.py  settings.py  urls.py  views.py
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py
tickets/: models.py  serializers.py  urls.py  views.py
tickets/migrations/: 0001_initial.py  0002_remove_ticket_session_alter_ticket_created_at_seat_and_more.py  0003_alter_ticket_seat.py
users/: models.py
users/migrations/: 0001_initial.py
